tests/neg/given-ambiguous-2.check
-- [E172] Type Error: tests/neg/given-ambiguous-2.scala:10:15 ----------------------------------------------------------
10 |def f: Unit = g // error: Ambiguous given instances
   |               ^
   | Ambiguous given instances: both given instance a1 and given instance a2 match type A of parameter a of method g
